server/compilers/goLiteJS/src/test/ml1/invalid/slice6.go
// append with missing parentheses
package main

var x []int

func main() {
    x = append x, 3
}
